codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__fork_initial_replay_interrupted_boundary_notice.snap
---
source: tui/src/chatwidget/tests/history_replay.rs
assertion_line: 1113
expression: rendered
---
• Forked from an in-progress turn. The parent session is still running.
