codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__live_app_server_inter_agent_message.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: rendered
---
• Agent message: ready for review from /root/goal_supervisor
