codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__live_app_server_legacy_agent_inbox_output_renders_agent_message_cell.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: rendered
---
• Agent message: ping 44 (121) from 019da80f-0535-7500-ad56-56ba1c79f815
