codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__live_app_server_raw_inter_agent_message_renders_agent_message_cell.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: rendered
---
• Agent message: ping 21 (21) from /root/goal_supervisor
