codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__live_app_server_subagent_notification_renders_status_message_cell.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: rendered
---
• Agent message: The subagent finished. from /root/factorial_sum_agent
