codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__live_supervisor_spawn_metadata_does_not_render_panel_without_thread_started.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: screen
---


› Ask Codex to do anything

  gpt-5.6-sol default · /tmp/project
