codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__live_supervisor_spawn_metadata_renders_history_without_thread_started.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: inserted
---
• Spawned Goal supervisor [goal_supervisor] (gpt-5.4-ultrafast low)
  └ Inspect the goal and decide whether to continue the parent.
