codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__live_watchdog_spawn_metadata_renders_history_without_thread_started.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: inserted
---
• Spawned Pauli [watchdog] (gpt-5.4-ultrafast low)
  └ Every time you start, respond with exactly pong.
