codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__resume_replay_closed_watchdog_history_cells.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: replayed_history
---
• Spawned Boyle [watchdog] (arcanine 1m low)
  └ Every time you start, respond with goodbye.


• Closed Boyle [watchdog]
