codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__resume_replay_does_not_resurrect_closed_watchdog_panel_row.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: screen
---


› Ask Codex to do anything

  gpt-5.3-codex default · /tmp/project
