codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__resume_replay_does_not_resurrect_open_subagent_panel_row.snap
---
source: tui/src/chatwidget/tests/app_server.rs
assertion_line: 1375
expression: screen
---


› Ask Codex to do anything

  gpt-5.5 default · /tmp/project
